test fix for images not showing

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body {
   min-height: 100vh;
-  background-image: url("./Images/background_img.jpg");
+  background-image: url("images/background_img.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
